--- a/src/app/juego-de-cuestionario/juego-de-cuestionario.page.html
+++ b/src/app/juego-de-cuestionario/juego-de-cuestionario.page.html
@@ -891,7 +891,7 @@
                 </ion-item>
                 <ion-item lines = "none" style = "text-align:rigth">
                   <ion-label style= " color: green"> {{alum.nota}}</ion-label>
-                  <!-- <img  *ngIf = "alum.ImagenPerfil" style = "width:40px; height: 40px;" [src]="alum.ImagenPerfil"> -->
+                  <!-- <img  *ngIf = "alum.imagenPerfil" style = "width:40px; height: 40px;" [src]="alum.imagenPerfil"> -->
                 </ion-item>
               </ion-item>
             </ion-list>
