--- a/src/app/juego-de-geocaching/juego-de-geocaching.page.html
+++ b/src/app/juego-de-geocaching/juego-de-geocaching.page.html
@@ -130,7 +130,7 @@
           <img src="../../assets/img/usuario.svg">
         </ion-avatar>
         <ion-label>
-          <h2> <b>{{alum.Nombre}} {{alum.PrimerApellido}}</b> </h2>
+          <h2> <b>{{alum.Nombre}} {{alum.primerApellido}}</b> </h2>
           <p> Puntos: {{alum.Puntuacion}}</p>
         </ion-label>
       </ion-item>
