--- a/src/app/juego-votacion-rapida/juego-votacion-rapida.page.html
+++ b/src/app/juego-votacion-rapida/juego-votacion-rapida.page.html
@@ -64,7 +64,7 @@
         <ion-item *ngFor="let alumno of alumnosVotados; let i=index">
           <ion-item>
           <ion-label>
-            {{alumno.Nombre}} {{alumno.PrimerApellido}} {{alumno.SegundoApellido}}
+            {{alumno.nombre}} {{alumno.primerApellido}} {{alumno.segundoApellido}}
           </ion-label>
           </ion-item>
   
