--- a/src/app/juego-competicion-f1/juego-competicion-f1.page.html
+++ b/src/app/juego-competicion-f1/juego-competicion-f1.page.html
@@ -91,8 +91,8 @@
           </mat-expansion-panel-header>
           
             <div  *ngFor="let alumno of alumnosEquipo">
-              <p *ngIf="alumno.id !== MiAlumno.id" >{{alumno.Nombre}} {{alumno.PrimerApellido}} </p>
-              <p *ngIf="alumno.id === MiAlumno.id" style="color:rgb(33, 163, 102);" >{{alumno.Nombre}} {{alumno.PrimerApellido}} </p>
+              <p *ngIf="alumno.id !== MiAlumno.id" >{{alumno.nombre}} {{alumno.primerApellido}} </p>
+              <p *ngIf="alumno.id === MiAlumno.id" style="color:rgb(33, 163, 102);" >{{alumno.nombre}} {{alumno.primerApellido}} </p>
             </div>
       
         </mat-expansion-panel>
