--- a/src/app/mis-grupos/mis-grupos.page.html
+++ b/src/app/mis-grupos/mis-grupos.page.html
@@ -39,10 +39,10 @@
           <div  *ngIf = "mostrarAlumnos" >
             <ion-item *ngFor="let alum of listaGruposYAlumnos[i].Alumnos"> 
               <ion-item lines = "none" style = "width: 20%">
-                <img  *ngIf = "alum.ImagenPerfil" style = "width:40px; height: 40px;" [src]="alum.ImagenPerfil">
+                <img  *ngIf = "alum.imagenPerfil" style = "width:40px; height: 40px;" [src]="alum.imagenPerfil">
               </ion-item>
               <ion-item lines = "none" style = "width: 80%">
-                <ion-label> {{alum.Nombre}} {{alum.PrimerApellido}} {{alum.SegundoApellido}} </ion-label>
+                <ion-label> {{alum.Nombre}} {{alum.primerApellido}} {{alum.segundoApellido}} </ion-label>
               </ion-item>
             </ion-item>
           </div>
@@ -92,10 +92,10 @@
                     <ion-item  lines = "none"*ngFor="let alum of alumnosEquipo">
 
                       <ion-item lines = "none" style = "width: 60%">
-                        <ion-label style= "font-size: small;"> {{alum.Nombre}} {{alum.PrimerApellido}} </ion-label>
+                        <ion-label style= "font-size: small;"> {{alum.nombre}} {{alum.primerApellido}} </ion-label>
                       </ion-item>
                       <ion-item lines = "none" style = "width: 40%">
-                        <img  *ngIf = "alum.ImagenPerfil" style = "width:40px; height: 40px;" [src]="alum.ImagenPerfil">
+                        <img  *ngIf = "alum.imagenPerfil" style = "width:40px; height: 40px;" [src]="alum.imagenPerfil">
                       </ion-item>
                     </ion-item>
                   </ion-list>
@@ -149,10 +149,10 @@
                     <ion-item  lines = "none" *ngFor="let alum of alumnosEquipo">
 
                       <ion-item lines = "none" style = "width: 60%">
-                        <ion-label style= "font-size: small;"> {{alum.Nombre}} {{alum.PrimerApellido}} </ion-label>
+                        <ion-label style= "font-size: small;"> {{alum.nombre}} {{alum.primerApellido}} </ion-label>
                       </ion-item>
                       <ion-item lines = "none" style = "width: 40%">
-                        <img  *ngIf = "alum.ImagenPerfil" style = "width:40px; height: 40px;" [src]="alum.ImagenPerfil">
+                        <img  *ngIf = "alum.imagenPerfil" style = "width:40px; height: 40px;" [src]="alum.imagenPerfil">
                       </ion-item>
                     </ion-item>
                   </ion-list>
@@ -201,7 +201,7 @@
                   
                   <ion-list>
                     <ion-item *ngFor="let alumno of alumnosEquipo">
-                      <ion-label>{{alumno.Nombre}} {{alumno.PrimerApellido}}</ion-label>  
+                      <ion-label>{{alumno.nombre}} {{alumno.primerApellido}}</ion-label>  
                     </ion-item>
                   </ion-list>
                   <br>
@@ -228,7 +228,7 @@
                 </mat-expansion-panel-header>
                 <ion-list>
                   <ion-item *ngFor="let alumno of alumnosEquipo">
-                    <ion-label>{{alumno.Nombre}} {{alumno.PrimerApellido}}</ion-label>  
+                    <ion-label>{{alumno.nombre}} {{alumno.primerApellido}}</ion-label>  
                   </ion-item>
                 </ion-list>
               </mat-expansion-panel>
