--- a/src/app/ver-avatares-grupo/ver-avatares-grupo.page.html
+++ b/src/app/ver-avatares-grupo/ver-avatares-grupo.page.html
@@ -13,7 +13,7 @@
       <!-- En la listaAvatares tengo para cada alumno: sus datos (campo al), su inscripcion (campo insc) y su voz (campo Voz) -->
       <div>
 
-            <h2> {{avatar.al.Nombre}} {{avatar.al.PrimerApellido}} {{avatar.al.SegundoApellido}} </h2>
+            <h2> {{avatar.al.Nombre}} {{avatar.al.primerApellido}} {{avatar.al.segundoApellido}} </h2>
                     
             <div  *ngIf = "avatar.insc.Silueta" style="display: flex; width: 300px; height: 324px; margin: auto; margin-top: 20%;">
               <img  [src]="imagenesAvatares + avatar.insc.Silueta" style="width: 300px; height: 324px; position: relative; z-index: 0;">
