--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,16 +1,16 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab='home'>
+    <ion-tab-button tab='inici'>
       <ion-icon name="home"></ion-icon>
     </ion-tab-button>
     <ion-tab-button tab='mis-grupos'>
       <ion-icon name="people"></ion-icon>
     </ion-tab-button>
     <ion-tab-button tab='inici'>
-      <ion-icon class = "verde" name="logo-game-controller-b"></ion-icon>
+      <ion-icon class="verde" name="logo-game-controller-b"></ion-icon>
     </ion-tab-button>
     <ion-tab-button tab='mis-juegos-inactivos'>
-      <ion-icon class = "negro" name="logo-game-controller-b"></ion-icon>
+      <ion-icon class="negro" name="logo-game-controller-b"></ion-icon>
     </ion-tab-button>
     <ion-tab-button tab='mi-perfil'>
       <ion-icon name="person"></ion-icon>
